# torashii

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  index.md  math.md  model.md  styles.md  utils.md
math/: index.html
model/: index.html
search/: search_index.json
styles/: index.html
torashii/: model.py  styles.py
torashii/tests/: test_math.py  test_model.py  test_utils.py
utils/: index.html
