[project]
name = "torashii"
version = "0.1.0"
description = "Multi-factor equity risk model for quantitative trading."
authors = [
    { name = "bayquant", email = "bayquant@proton.me" }
]
readme = "README.md"
requires-python = "==3.12.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26.2",
    "polars>=1.0"
]

[dependency-groups]
dev = [
  "pytest==7.4.4"
]
